@@ -30,7 +30,7 @@
  DAMAGE. 
  =========================================================================*/
 
-/* $Id: library.h,v 1.6 2001/07/05 14:31:00 broeker Exp $ */
+/* $Id: library.h,v 1.7 2001/07/05 15:08:21 broeker Exp $ */
 
 #ifndef CSCOPE_LIBRARY_H
 #define CSCOPE_LIBRARY_H
@@ -38,12 +38,15 @@
 #include <stdio.h>		/* need FILE* type def. */
 
 /* private library */
-char	*mybasename(char *path);
 char	*compath(char *pathname);
 char	*egrepinit(char *egreppat);
 char	*logdir(char *name);
+char	*mybasename(char *path);
 void	*mycalloc(int nelem, int size);
+FILE	*myfopen(char *path, char *mode);
+char	*mygetenv(char *variable, char *deflt);
 void	*mymalloc(int size);
+int	myopen(char *path, int flag, int mode);
 void	*myrealloc(void *p, int size);
 char	*stralloc(char *s);
 FILE	*mypopen(char *cmd, char *mode);
@@ -52,6 +55,9 @@ FILE	*vpfopen(char *filename, char *type);
 void	egrepcaseless(int i);
 
 /* Programmer's Workbench library (-lPW) */
+/* FIXME HBB 20010705: these should never be here. We should just
+ * #include the relevant header, instead.  Moreover, they don't seem
+ * to be used, anyway ... */
 char	*regcmp(), *regex();
 
 #endif /* CSCOPE_LIBRARY_H */
